# Marketplace_blog

./: .env.example  .env.example.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  cookies.txt  docker-compose.yml  pyproject.toml  pytest.ini
migrations/: env.py
migrations/versions/: a408d172a2f1_init_migration.py
src/marketplace_blog/: config.py  main.py  schemas.py
src/marketplace_blog/core/: database.py  dependencies.py  security.py
src/marketplace_blog/models/: Post.py  category.py  user.py
src/marketplace_blog/routers/: auth.py  categories.py  images.py  posts.py
src/marketplace_blog/services/: category_service.py  image_service.py  post_service.py  user_service.py
src/marketplace_blog/tasks/: celery_app.py  email_tasks.py
tests/: conftest.py  test_auth.py  test_categories.py  test_posts.py  test_search.py
