[project]
name = "marketplace-blog-api"
version = "0.1.0"
description = "Marketplace Blog API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "python-multipart>=0.0.26",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.12",
    "greenlet>=3.3.2",
    "python-jose[cryptography]>=3.5.0",
    "passlib[argon2]>=1.7.4",
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "celery>=5.6.3",
    "httpx>=0.27.2",
    "requests>=2.33.1",
    "aiosmtplib>=5.1.0",
    "boto3>=1.42.89",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.15.9",
    "pre-commit>=4.5.1",
    "mypy>=1.8.0",
    "boto3-stubs>=1.42.89",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    ".pytest_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "B008", "C901"]

[tool.ruff.lint.isort]
known-first-party = ["src"]
known-third-party = ["fastapi", "sqlalchemy", "alembic"]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004", "RUF002", "RUF001"]
"src/**/*.py" = ["RUF002", "RUF001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
]
